commit for special person

--- a/app/contacts.html
+++ b/app/contacts.html
@@ -135,7 +135,7 @@
                     <label for="select-file" class="label-for-file">прикрепить файл</label>
                     <input type="file" name="file" id="select-file">
 
-                    <button type="submit" class="main-button blue">Отправить</button>
+                    <button type="submit" class="main-button-link blue">Отправить</button>
                 </form>
             </div>
         </div>
