--- a/app/exapmle_article.html
+++ b/app/exapmle_article.html
@@ -164,7 +164,7 @@
                         Дорожная карта по развитию аддитивных технологий в России разработана в рамках реализации соглашения между Правительством Российской Федерации и Государственной корпорацией по атомной энергии «Росатом» в целях развития в Российской Федерации высокотехнологичной области «Технологии новых материалов и веществ».
                     </p>
                 </div>
-                <a href="#" class="main-button blue-article">
+                <a href="#" class="main-button-link blue-article">
                     Перейти в раздел “Новости”
                 </a>
             </div>
@@ -221,7 +221,7 @@
                 <div class="footer__social">
                     <a href="#"><img src="img/fb.svg" alt="Facebook"/></a>
                     <a href="#"><img src="img/insta.svg" alt="Instagramm"/></a>
-                    <a href="#"><img src="img/yt.svg" alt="Instagramm"/></a>
+                    <a href="#"><img src="img/yt.svg" alt=""/></a>
                 </div>
                 <h6 class="footer__title">ИНН:7724424381</h6>
                 <h6 class="footer__title">ОГРН: 5177746230547</h6>
