--- a/app/exapmle_news.html
+++ b/app/exapmle_news.html
@@ -157,7 +157,7 @@
                     </p>
                 </div>
 
-                <a href="#" class="main-button blue-article">
+                <a href="#" class="main-button-link blue-article">
 
                     Перейти в раздел “Полезные Статьи”
                 </a>
