--- a/app/guidline.html
+++ b/app/guidline.html
@@ -99,8 +99,8 @@
     </div>
     <div class="guidline__btn-container">
         <div class="container">
-            <a href="#" class="main-button blue-article">Скачать логотипы</a>
-            <a href="#" class="main-button blue-article">Скачать брендбук</a>
+            <a href="#" class="main-button-link blue-article">Скачать логотипы</a>
+            <a href="#" class="main-button-link blue-article">Скачать брендбук</a>
         </div>
     </div>
 
