--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,9 @@
                         </ul>
                     </li>
                     <li class="nav-item dropdown menu__item">
+                        <a class="nav-link menu__link" href="calculator.html">Расчет стоимости</a>
+                    </li>
+                    <li class="nav-item dropdown menu__item">
                         <a class="nav-link menu__link" href="#">Продукция</a>
                         <ul class="dropdown-menu" >
                             <li><a href="threed_printers.html" class="dropdown-item">3D-принтеры</a></li>
@@ -121,7 +124,7 @@
                 <p class="rusatom__description">Единый отраслевой интегратор Госкорпорации<br>«Росатом» по направлению
                     «Аддитивные технологии»</p>
                 <p class="rusatom__offer">представляет 3D-принтер RusMelt 300M</p>
-                <a class="main-button" href="#">Подробнее</a>
+                <a class="main-button-link" href="index.html">Подробнее</a>
             </div>
         </div>
     </div>
@@ -153,7 +156,7 @@
                             <strong>
                                 <span class="t-titl" >В рамках Петербургского международного экономического форума Топливная компания Росатома «ТВЭЛ» и Hermith GmbH (Германия), крупный европейский поставщик титана, заключили ...</span>
                             </strong>
-                            <a class="main-button blue" href="#">Читать</a>
+                            <a class="main-button-link blue" href="exapmle_article.html">Читать</a>
                         </div>
 
                     </div>
@@ -177,7 +180,7 @@
                                 <strong>
                                     <span class="t-titl" >ООО «Русатом – Аддитивные Технологии», (ООО «РусАТ», предприятие Топливной компании Росатома «ТВЭЛ») и Общество с ограниченной ответственностью «Донской инжиниринговый центр» (ООО «ДИЦ») заключили соглашение ...</span>
                                 </strong>
-                                <a class="main-button blue" href="#">Читать</a>
+                                <a class="main-button-link blue" href="exapmle_article.html">Читать</a>
                             </div>
 
                         </div>
@@ -199,7 +202,7 @@
                                 <strong>
                                     <span class="t-titl" >ООО «РусАТ» и Hunan Farsoon High-tech Co., Ltd (Китай) заключили меморандум о взаимопонимании технологий</span>
                                 </strong>
-                                <a class="main-button blue" href="#">Читать</a>
+                                <a class="main-button-link blue" href="index.html">Читать</a>
                             </div>
 
                         </div>
@@ -221,7 +224,7 @@
                                 <strong>
                                     <span class="t-titl" >ООО «РусАТ» и АО «Уральский завод гражданской авиации» заключили соглашение о стратегическом партнерстве ...</span>
                                 </strong>
-                                <a class="main-button blue" href="#">Читать</a>
+                                <a class="main-button-link blue" href="exapmle_article.html">Читать</a>
                             </div>
 
                         </div>
@@ -341,7 +344,7 @@
                 <div class="mp__product-item-container" style="background-image: url('img/main-page_img-printer.png')">
                     <div class="overlay"></div>
                     <p class="product-item__name">3D-принтеры</p>
-                    <a href="#" class="main-button white h51">Перейти</a>
+                    <a href="threed_printers.html" class="main-button-link white h51">Перейти</a>
                 </div>
             </div>
             <div class="col-md-4 wow fadeInUp animated" data-wow-delay=".3s">
@@ -349,14 +352,14 @@
                     <div class="overlay overlay-fiolet"></div>
                     <p class="product-item__name">Материалы для  <br>
                         3D-печати</p>
-                    <a href="#" class="main-button white h51">Перейти</a>
+                    <a href="materials.html" class="main-button-link white h51">Перейти</a>
                 </div>
             </div>
             <div class="col-md-4 wow fadeInUp animated" data-wow-delay=".6s">
                 <div class="mp__product-item-container" style="background-image: url('img/product-img-3.png')">
                     <div class="overlay overlay-aqua_green"></div>
                     <p class="product-item__name">Сопутствующее <br> оборудование</p>
-                    <a href="#" class="main-button white h51">Перейти</a>
+                    <a href="related_equipment.html" class="main-button-link white h51">Перейти</a>
                 </div>
             </div>
         </div>
@@ -372,7 +375,7 @@
                     <div class="overlay overlay-gray"></div>
                     <p class="product-item__name">3D-печать</p>
                     <p class="product-item__descr">Мы предлагаем услуги 3D-печати высшего качества по всем современным стандартам и технологиям.</p>
-                    <a href="#" class="main-button white h51">Подробнее</a>
+                    <a href="threed_printers.html" class="main-button-link white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".3s">
@@ -380,7 +383,7 @@
                     <div class="overlay overlay-coral"></div>
                     <p class="product-item__name">Оптимизация  деталей</p>
                     <p class="product-item__descr">Наши инженеры занимаются оптимизацией топологии деталей, которая заключается в снижении массы при обеспечении необходимого запаса прочности.</p>
-                    <a href="#" class="main-button white h51">Подробнее</a>
+                    <a href="index.html" class="main-button-link white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-6 wow fadeInUp animated" data-wow-delay=".6s">
@@ -388,7 +391,7 @@
                     <div class="overlay overlay-blue"></div>
                     <p class="product-item__name product-item__name--big">Аудит предприятий на предмет аддитивных технологий</p>
                     <p class="product-item__descr">Специалисты ООО «РусАТ» проведут комплексный анализ Вашего предприятия и проконсультируют по внедрению аддитивных технологий в технологический процесс производства.</p>
-                    <a href="#" class="main-button white h51">Подробнее</a>
+                    <a href="index.html" class="main-button-link white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-6 wow fadeInUp animated">
@@ -396,7 +399,7 @@
                     <div class="overlay overlay-strawberry"></div>
                     <p class="product-item__name product-item__name--big">3D-сканирование</p>
                     <p class="product-item__descr">Комплексные услуги профессионального 3D-сканирования и гарантия отличного результата.</p>
-                    <a href="#" class="main-button white h51">Подробнее</a>
+                    <a href="index.html" class="main-button-link white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".3s">
@@ -404,7 +407,7 @@
                     <div class="overlay overlay-gray"></div>
                     <p class="product-item__name">Тренинги</p>
                     <p class="product-item__descr">Наши курсы созданы для тех, кто собирается познать сферу аддитивного производства или усовершенствовать свои технические навыки.</p>
-                    <a href="#" class="main-button white h51">Подробнее</a>
+                    <a href="services.html" class="main-button-link white h51">Подробнее</a>
                 </div>
             </div>
             <div class="col-md-3 wow fadeInUp animated" data-wow-delay=".6s">
@@ -412,7 +415,7 @@
                     <div class="overlay overlay-coral"></div>
                     <p class="product-item__name">Реверс - инжиниринг</p>
                     <p class="product-item__descr">Вам требуется запасная часть, которая снята с производства или которую невозможно доставить в кратчайшие сроки? </p>
-                    <a href="#" class="main-button white h51">Подробнее</a>
+                    <a href="#" class="main-button-link white h51">Подробнее</a>
                 </div>
             </div>
         </div>
