--- a/app/materials.html
+++ b/app/materials.html
@@ -107,7 +107,7 @@
                     <div class="printers-after-header__item-container">
                         <div class="printers-after-header__section__item__inner">
                             <p class="printers-after-header__section__item__inner_title">Металлические порошки</p>
-                            <a href="#" class="main-button white h51">перейти</a>
+                            <a href="metal_powders.html" class="main-button-link white h51">перейти</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <div class="printers-after-header__item-container">
                         <div class="printers-after-header__section__item__inner">
                             <p class="printers-after-header__section__item__inner_title">Металлическая проволока</p>
-                            <a href="#" class="main-button white h51">перейти</a>
+                            <a href="metal_wire.html" class="main-button-link white h51">перейти</a>
                         </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                     <div class="printers-after-header__item-container">
                         <div class="printers-after-header__section__item__inner">
                             <p class="printers-after-header__section__item__inner_title">Полиамиды</p>
-                            <a href="#" class="main-button white h51">перейти</a>
+                            <a href="poliamids.html" class="main-button-link white h51">перейти</a>
                         </div>
                     </div>
                 </div>
