--- a/app/metal_wire.html
+++ b/app/metal_wire.html
@@ -102,7 +102,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Титан</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Инконель</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Алюминий</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Нержавеющая сталь</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
