--- a/app/metal_powders.html
+++ b/app/metal_powders.html
@@ -104,7 +104,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Титан</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Инконель</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Алюминий</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Нержавеющая сталь</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
