--- a/app/sls_printers.html
+++ b/app/sls_printers.html
@@ -91,13 +91,13 @@
 
 <section class="printers-after-header__section">
     <div class="container">
-        <h2 class="site-h2__section-divider">Металлические SLM-принтеры</h2>
+        <h2 class="site-h2__section-divider">Металлические SLS-принтеры</h2>
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 mp-mb20">
                 <div class="printers-after-header__item-container">
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Дорожная карта развития Аддитивных технологий в Российской Федерации</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Виртуальный
                             3D - принтер</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Карточка, что бы продемонстрировать
                             отступ между блоками</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <div class="printers-after-header__section__item__inner">
                         <p class="printers-after-header__section__item__inner_title">Карточка, что бы продемонстрировать
                             отступ между блоками</p>
-                        <a href="#" class="main-button white h51">перейти</a>
+                        <a href="#" class="main-button-link white h51">перейти</a>
                     </div>
                 </div>
             </div>
