slm_printers.html & sls_printers.html & main.min.css

--- a/app/slm_printers.html
+++ b/app/slm_printers.html
@@ -145,7 +145,7 @@
                     <div class="rusmelt__title-container">
                         <h1 class="rusmelt__title">RusMelt 300M</h1>
                     </div>
-                    <a class="main-button rusmelt__button" href="#">Узнать стоимость</a>
+                    <a class="main-button rusmelt__button" href="#small-dialog">Узнать стоимость</a>
                     <p class="rusmelt__caption">Высокопроизводительная российская система селективного лазерного плавления</p>
                 </div>
             </div>
@@ -474,7 +474,7 @@
                     <div class="rusmelt__title-container">
                         <h1 class="rusmelt__title">RusMelt 600M</h1>
                     </div>
-                    <a class="main-button rusmelt__button" href="#">Узнать стоимость</a>
+                    <a class="main-button rusmelt__button" href="#small-dialog">Узнать стоимость</a>
                     <p class="rusmelt__caption">Высокопроизводительная российская система селективного лазерного плавления</p>
                 </div>
             </div>
@@ -798,7 +798,7 @@
                     <div class="rusmelt__title-container">
                         <h1 class="rusmelt__title">Линейка принтеров “2М”</h1>
                     </div>
-                    <a class="main-button rusmelt__button" href="#">Узнать стоимость</a>
+                    <a class="main-button rusmelt__button" href="#small-dialog">Узнать стоимость</a>
                     <p class="rusmelt__caption">Высокопроизводительная российская система селективного лазерного плавления</p>
                 </div>
             </div>
